--- a/rv2015/rv2015_main.tex
+++ b/rv2015/rv2015_main.tex
@@ -72,8 +72,8 @@
 
 \author{Aaron Kane\inst{1} \and Omar Chowdhury\inst{2} \and Anupam Datta\inst{1} \and Philip Koopman\inst{1}}
 \institute{Carnegie Mellon University, Pittsburgh, PA
-			\and  Purdue University, IN\\
-			\email{akane@cmu.edu, ochowdhu@purdue.edu, danupam@cmu.edu, koopman@cmu.edu}}
+			\and  Purdue University, West Lafayette, IN\\
+			\email{akane@alumni.cmu.edu, ochowdhu@purdue.edu, danupam@cmu.edu, koopman@cmu.edu}}
 
 
 
